clusters/home/default/node-red/90-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: node-red-deployment
  namespace: default
  labels:
    app: node-red
spec:
  serviceName: node-red-service
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
      - name: node-red
        image: nodered/node-red:4.0.7-18
        ports:
        - containerPort: 1880
          protocol: TCP
        volumeMounts:
        - name: node-red-data
          mountPath: /data
        livenessProbe:
          httpGet:
            path: /
            port: 1880
          initialDelaySeconds: 500
          periodSeconds: 60
          timeoutSeconds: 10
          failureThreshold: 5
        resources:
          requests:
            memory: "256Mi"

      nodeSelector:
        disk: ssd
      volumes:
      - name: node-red-data
        hostPath:
          path: /mnt/shared_data/k8s/node-red/data

---
