clusters/home/default/node-red/80-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "kokev-issuer"
spec:
  ingressClassName: nginx
  rules:
    - host: node-red.kokev.de
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: node-red-service
                port:
                  number: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
     - hosts:
       - node-red.kokev.de
       secretName: node-red-tls
